# research_assignment

./: .gitignore  CMakeLists.txt  README.md  ai-disclosure.md  observations.md
.devcontainer/: devcontainer.json
include/: alg_graphs.h  alg_maxsubarraysum.h  alg_stopwatch.h  alg_strings.h  alg_uf.h
resources/: ActivitiesSample.txt  Matrix10x10.txt  Matrix2x2.txt  Matrix4x4.txt  Matrix8x8.txt  String100000.txt  String2000.txt  String500.txt  mediumUG.txt  testDG.txt  tinyDG.txt  tinyUG.txt
src/: alg_graphs.cpp  alg_stopwatch.cpp  alg_strings.cpp  part1.cpp  part2.cpp
test/: tester1.cpp  tester2.cpp
